Add Skeleton exporting

--- a/editor/index.html
+++ b/editor/index.html
@@ -80,6 +80,7 @@
 		<script src="js/libs/signals.min.js"></script>
 		<script src="js/libs/ui.js"></script>
 		<script src="js/libs/ui.three.js"></script>
+		<script src="js/libs/clone.js"></script>
 
 		<script src="js/libs/app.js"></script>
 		<script src="js/Player.js"></script>
