--- a/editor/index.html
+++ b/editor/index.html
@@ -9,6 +9,10 @@
 		<link href="css/main.css" rel="stylesheet" />
 		<link id="theme" href="css/light.css" rel="stylesheet" />
 
+		<script>
+			console.warn = () => {};
+		</script>
+
 		<script src="../build/three.js"></script>
 		<script src="../examples/js/libs/system.min.js"></script>
 
