--- a/editor/index.html
+++ b/editor/index.html
@@ -88,6 +88,14 @@
 		<script src="js/libs/lodash.min.js"></script>
 
 		<script src="js/libs/app.js"></script>
+		<script src="js/parser/minivents.js"></script>
+		<script src="js/parser/DataParser.js"></script>
+		<script src="js/parser/AliasDataParser.js"></script>
+		<script src="js/parser/ActionDataParser.js"></script>
+		<script src="js/parser/AudioDataParser.js"></script>
+		<script src="js/parser/TriggererDataParser.js"></script>
+		<script src="js/parser/FinishDataParser.js"></script>
+		<script src="js/parser/ARParser.js"></script>
 		<script src="js/Player.js"></script>
 		<script src="js/Script.js"></script>
 
