Button UI clip select

--- a/editor/index.html
+++ b/editor/index.html
@@ -90,6 +90,7 @@
 		<script src="js/libs/app.js"></script>
 		<script src="js/parser/minivents.js"></script>
 		<script src="js/parser/DataParser.js"></script>
+		<script src="js/parser/ButtonDataParser.js"></script>
 		<script src="js/parser/AliasDataParser.js"></script>
 		<script src="js/parser/ActionDataParser.js"></script>
 		<script src="js/parser/AudioDataParser.js"></script>
